[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "research-papers-implementation"
version = "1.0.0"
description = "Implementations of classic CNN architectures from research papers using Keras"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "deep-learning",
    "cnn",
    "convolutional-neural-networks",
    "tensorflow",
    "keras",
    "lenet",
    "alexnet",
    "vggnet",
    "image-classification"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "tensorflow>=2.13.0",
    "keras>=2.13.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "Pillow>=10.0.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
gpu = ["tensorflow[and-cuda]>=2.13.0"]
dev = [
    "black>=23.0",
    "flake8>=6.0",
    "pylint>=3.0",
    "mypy>=1.7",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "jupyter-lab>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
]

[project.urls]
Homepage = "https://github.com/your-username/research-papers-implementation"
Documentation = "https://research-papers-implementation.readthedocs.io"
Repository = "https://github.com/your-username/research-papers-implementation.git"
"Bug Tracker" = "https://github.com/your-username/research-papers-implementation/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | \.ipynb_checkpoints
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = [".venv/*", "venv/*", "cnn_env/*"]

[tool.pylint.messages_control]
disable = [
    "C0330", "C0326",  # Bad whitespace
    "R0903",           # Too few public methods
    "R0913",           # Too many arguments
    "W0212",           # Access protected member
]

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]